--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
   },
   "homepage": "https://github.com/Ashnayak/BookMyHall",
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "ejs": "^2.5.7",
     "express": "^4.16.2",
     "mysql": "^2.15.0"
   }
